hero top spacing fix

--- a/assets/css/small.css
+++ b/assets/css/small.css
@@ -6,3 +6,7 @@
     width: 100%;
     aspect-ratio: 16/9;
 }
+
+.my-pt {
+    margin-top: 80px;
+}
